--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@actions/core": "^1.2.4",
     "@actions/github": "^4.0.0",
     "@foo-software/lighthouse-check": "^1.0.4",
-    "actions-toolkit": "^5.0.0",
-    "heroku-client": "^3.1.0"
+    "actions-toolkit": "^5.0.0"
   }
 }
